--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -50,7 +50,7 @@
     <string-array name="head">
         <item>添加新朋友</item>
         <item>群组</item>
-        <item>部落</item>
+        <item>车队</item>
     </string-array>
 
     <string-array name="group">
