--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,8 @@
     <color name="PrimaryColor">#7076fa</color>
     <color name="TittleColor">#50597e</color>
     <color name="TextColor">#b2b2bf</color>
+    <color name="BackgroundColor">#f1f1f1</color>
+    <color name="highgray">#DBDBDB</color>
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
@@ -69,7 +71,6 @@
     <color name="gainsboro">#dcdcdc</color><!--淡灰色 -->
     <color name="crimson">#dc143c</color><!--暗深红色 -->
     <color name="palevioletred">#db7093</color><!--苍紫罗兰色 -->
-    <color name="highgray">#DBDBDB</color><!--苍紫罗兰色 -->
     <color name="goldenrod">#daa520</color><!--金麒麟色 -->
     <color name="orchid">#da70d6</color><!--淡紫色 -->
     <color name="thistle">#d8bfd8</color><!--蓟色 -->
