--- a/app/src/main/res/layout/activity_group.xml
+++ b/app/src/main/res/layout/activity_group.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
+                android:background="@color/BackgroundColor"
                 android:gravity="center_vertical"
                 android:orientation="vertical">
 
@@ -10,7 +11,7 @@
         android:layout_width="fill_parent"
         android:layout_height="55dp"
         android:background="@color/PrimaryColor"
-        android:orientation="vertical" >
+        android:orientation="vertical">
 
         <Button
             android:id="@+id/btn_back"
@@ -21,7 +22,7 @@
             android:background="@drawable/selector_btn_back"
             android:paddingLeft="10dp"
             android:textColor="#ffffff"
-            android:textSize="16sp" />
+            android:textSize="16sp"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -29,14 +30,15 @@
             android:layout_centerInParent="true"
             android:text="群组"
             android:textColor="#ffffff"
-            android:textSize="20.0sp" />
+            android:textSize="@dimen/NavigationTittleSize"/>
     </RelativeLayout>
 
     <ListView
+        android:id="@+id/listview"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_below="@id/rl_layout"
-        android:scrollbars="none"
-        android:id="@+id/listview"/>
+        android:background="@color/white"
+        android:scrollbars="none"/>
 
 </RelativeLayout>
