--- a/app/src/main/res/layout/activity_top.xml
+++ b/app/src/main/res/layout/activity_top.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:text="途聆"
-        android:textSize="20dp"
+        android:textSize="@dimen/NavigationTittleSize"
         android:textColor="#ffffff"/>
 
 </RelativeLayout>
