--- a/app/src/main/res/layout/item_group.xml
+++ b/app/src/main/res/layout/item_group.xml
@@ -27,7 +27,7 @@
             android:layout_gravity="center_vertical"
             android:gravity="center_vertical"
             android:textColor="@color/TittleColor"
-            android:textSize="18dp"
+            android:textSize="@dimen/TextTextSize"
             android:paddingLeft="5dip"
             android:paddingTop="10dip"
             android:paddingBottom="10dip"
