--- a/app/src/main/res/layout/listview.xml
+++ b/app/src/main/res/layout/listview.xml
@@ -21,7 +21,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:textSize="18dp"
+            android:textSize="@dimen/TittleTextSize"
             android:textColor="@color/TittleColor"
             android:textStyle="bold"
             android:layout_marginLeft="10dp"
@@ -34,7 +34,7 @@
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
             android:textColor="@color/TextColor"
-            android:textSize="15dp"
+            android:textSize="@dimen/TextTextSize"
             android:text="TextView" />
 
     </LinearLayout>
@@ -45,5 +45,6 @@
         android:layout_height="wrap_content"
         android:textColor="@color/TextColor"
         android:layout_marginRight="13dp"
+        android:textSize="@dimen/TextTextSize"
         android:text="TextView" />
 </LinearLayout>
