--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -3,7 +3,7 @@
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
-                android:background="#f0f0e0" >
+                android:background="@color/BackgroundColor" >
 
     <RelativeLayout
         android:id="@+id/rl_layout"
@@ -29,7 +29,7 @@
             android:layout_centerInParent="true"
             android:text="御坂美琴"
             android:textColor="#ffffff"
-            android:textSize="20.0sp" />
+            android:textSize="@dimen/NavigationTittleSize" />
     </RelativeLayout>
 
     <RelativeLayout
@@ -37,7 +37,7 @@
         android:layout_width="fill_parent"
         android:layout_height="60dp"
         android:layout_alignParentBottom="true"
-        android:background="#E8E8E8" >
+        android:background="@color/BackgroundColor" >
 
         <Button
             android:id="@+id/btn_send"
