--- a/app/src/main/res/layout/page_01.xml
+++ b/app/src/main/res/layout/page_01.xml
@@ -2,7 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:background="@color/BackgroundColor">
+
     <RelativeLayout
         android:id="@+id/rl_layout"
         android:layout_width="fill_parent"
@@ -16,14 +18,15 @@
             android:layout_centerInParent="true"
             android:text="聆途"
             android:textColor="#ffffff"
-            android:textSize="20.0sp"/>
+            android:textSize="@dimen/NavigationTittleSize"/>
     </RelativeLayout>
 
     <ListView
         android:id="@+id/listview"
-        android:layout_below="@id/rl_layout"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent">
+        android:layout_height="fill_parent"
+        android:background="@color/white"
+        android:layout_below="@id/rl_layout">
 
     </ListView>
 
