--- a/app/src/main/res/layout/page_04.xml
+++ b/app/src/main/res/layout/page_04.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
-              android:background="#EEE"
+              android:background="@color/BackgroundColor"
               android:orientation="vertical" >
     <RelativeLayout
         android:id="@+id/rl_layout"
@@ -17,19 +17,19 @@
             android:layout_centerInParent="true"
             android:text="我"
             android:textColor="#ffffff"
-            android:textSize="20.0sp"/>
+            android:textSize="@dimen/NavigationTittleSize"/>
     </RelativeLayout>
 
     <ScrollView
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:background="@color/highgray"
+        android:background="@color/BackgroundColor"
         android:scrollbarStyle="outsideOverlay">
 
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:background="@color/highgray"
+            android:background="@color/BackgroundColor"
             android:orientation="vertical">
             <!--   ***********************************************************************   -->
             <RelativeLayout
@@ -79,7 +79,7 @@
                     android:padding="8dp"
                     android:text="白井黑子"
                     android:textColor="@color/TittleColor"
-                    android:textSize="18dp"/>
+                    android:textSize="@dimen/TittleTextSize"/>
 
                 <TextView
                     android:id="@+id/StxtView01"
@@ -91,7 +91,7 @@
                     android:textColor="@color/TextColor"
                     android:padding="5dp"
                     android:text="途聆号:moon2333"
-                    android:textSize="14dp"/>
+                    android:textSize="@dimen/TextTextSize"/>
 
                 <ImageView
                     android:id="@+id/SimageView1"
@@ -119,7 +119,7 @@
                     android:padding="12dp"
                     android:text="收藏"
                     android:textColor="@color/TittleColor"
-                    android:textSize="16dp"/>
+                    android:textSize="@dimen/TittleTextSize"/>
 
                 <ImageView
                     android:id="@+id/SimageView2"
@@ -147,7 +147,7 @@
                     android:padding="12dp"
                     android:text="相册"
                     android:textColor="@color/TittleColor"
-                    android:textSize="16dp"/>
+                    android:textSize="@dimen/TittleTextSize"/>
 
                 <ImageView
                     android:id="@+id/SimageView3"
@@ -175,7 +175,7 @@
                     android:padding="12dp"
                     android:text="预留"
                     android:textColor="@color/TittleColor"
-                    android:textSize="16dp"/>
+                    android:textSize="@dimen/TittleTextSize"/>
 
                 <ImageView
                     android:id="@+id/SimageView4"
@@ -203,7 +203,7 @@
                     android:padding="12dp"
                     android:text="预留"
                     android:textColor="@color/TittleColor"
-                    android:textSize="16dp"/>
+                    android:textSize="@dimen/TittleTextSize"/>
 
                 <ImageView
                     android:id="@+id/SimageView5"
@@ -231,7 +231,7 @@
                     android:padding="12dp"
                     android:text="设置"
                     android:textColor="@color/TittleColor"
-                    android:textSize="16dp"/>
+                    android:textSize="@dimen/TittleTextSize"/>
 
                 <ImageView
                     android:id="@+id/SimageView6"
