--- a/app/src/main/res/layout/personal_activity.xml
+++ b/app/src/main/res/layout/personal_activity.xml
@@ -3,7 +3,7 @@
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
-                android:background="#EEE"
+                android:background="@color/BackgroundColor"
                 android:orientation="vertical">
 
     <RelativeLayout
@@ -30,20 +30,20 @@
             android:layout_centerInParent="true"
             android:text="个人信息"
             android:textColor="#ffffff"
-            android:textSize="20.0sp"/>
+            android:textSize="@dimen/NavigationTittleSize"/>
     </RelativeLayout>
 
     <ScrollView
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:background="#EAEAEA"
+        android:background="@color/BackgroundColor"
         android:scrollbarStyle="outsideOverlay"
         android:layout_below="@id/rl_layout">
 
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:background="@color/highgray"
+            android:background="@color/BackgroundColor"
             android:orientation="vertical">
             <!--   ***********************************************************************   -->
             <RelativeLayout
@@ -92,7 +92,7 @@
                     android:padding="8dp"
                     android:text="头像"
                     android:textColor="@color/TittleColor"
-                    android:textSize="18dp"/>
+                    android:textSize="@dimen/TittleTextSize"/>
 
 
                 <ImageView
@@ -123,7 +123,7 @@
                     android:padding="8dp"
                     android:text="名字"
                     android:textColor="@color/TittleColor"
-                    android:textSize="18dp"/>
+                    android:textSize="@dimen/TittleTextSize"/>
 
                 <TextView
                     android:id="@+id/text2"
@@ -135,7 +135,7 @@
                     android:layout_toLeftOf="@id/SimageView2"
                     android:text="白井黑子"
                     android:textColor="@color/TextColor"
-                    android:textSize="16dp"/>
+                    android:textSize="@dimen/TextTextSize"/>
 
                 <ImageView
                     android:id="@+id/SimageView2"
@@ -165,7 +165,7 @@
                     android:layout_centerVertical="true"
                     android:text="途聆号"
                     android:textColor="@color/TittleColor"
-                    android:textSize="18dp"/>
+                    android:textSize="@dimen/TittleTextSize"/>
 
                 <TextView
                     android:id="@+id/text3"
@@ -177,7 +177,7 @@
                     android:layout_toLeftOf="@id/SimageView3"
                     android:text="moon2333"
                     android:textColor="@color/TextColor"
-                    android:textSize="16dp"/>
+                    android:textSize="@dimen/TextTextSize"/>
 
                 <ImageView
                     android:id="@+id/SimageView3"
@@ -207,7 +207,7 @@
                     android:layout_centerVertical="true"
                     android:text="性别"
                     android:textColor="@color/TittleColor"
-                    android:textSize="18dp"/>
+                    android:textSize="@dimen/TittleTextSize"/>
 
                 <TextView
                     android:id="@+id/text4"
@@ -219,7 +219,7 @@
                     android:layout_toLeftOf="@id/SimageView4"
                     android:text="女"
                     android:textColor="@color/TextColor"
-                    android:textSize="16dp"/>
+                    android:textSize="@dimen/TextTextSize"/>
 
                 <ImageView
                     android:id="@+id/SimageView4"
@@ -249,7 +249,7 @@
                     android:layout_centerVertical="true"
                     android:text="地区"
                     android:textColor="@color/TittleColor"
-                    android:textSize="18dp"/>
+                    android:textSize="@dimen/TittleTextSize"/>
 
                 <TextView
                     android:id="@+id/text5"
@@ -261,7 +261,7 @@
                     android:layout_toLeftOf="@id/SimageView5"
                     android:text="东京都学园都市"
                     android:textColor="@color/TextColor"
-                    android:textSize="16dp"/>
+                    android:textSize="@dimen/TextTextSize"/>
 
                 <ImageView
                     android:id="@+id/SimageView5"
@@ -291,7 +291,7 @@
                     android:layout_centerVertical="true"
                     android:text="个性签名"
                     android:textColor="@color/TittleColor"
-                    android:textSize="18dp"/>
+                    android:textSize="@dimen/TittleTextSize"/>
 
                 <TextView
                     android:id="@+id/text6"
@@ -303,7 +303,7 @@
                     android:layout_toLeftOf="@id/SimageView6"
                     android:text="啊啊啊姐姐大人~"
                     android:textColor="@color/TextColor"
-                    android:textSize="16dp"/>
+                    android:textSize="@dimen/TextTextSize"/>
 
                 <ImageView
                     android:id="@+id/SimageView6"
@@ -333,7 +333,7 @@
                     android:padding="8dp"
                     android:text="我的地址"
                     android:textColor="@color/TittleColor"
-                    android:textSize="18dp"/>
+                    android:textSize="@dimen/TittleTextSize"/>
 
                 <ImageView
                     android:id="@+id/SimageView7"
