--- a/app/src/main/res/layout/personal_collection.xml
+++ b/app/src/main/res/layout/personal_collection.xml
@@ -3,7 +3,7 @@
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
-                android:background="#EEE"
+                android:background="@color/BackgroundColor"
                 android:orientation="vertical">
 
     <RelativeLayout
@@ -22,7 +22,7 @@
             android:background="@drawable/selector_btn_back"
             android:paddingLeft="10dp"
             android:textColor="#ffffff"
-            android:textSize="16sp"/>
+            android:textSize="@dimen/NavigationTittleSize"/>
 
         <TextView
             android:layout_width="wrap_content"
