--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,8 +18,8 @@
     <style name="chat_content_date_style">
         <item name="android:minHeight">50dp</item>
         <item name="android:gravity">left|center</item>
-        <item name="android:textColor">#000000</item>
-        <item name="android:textSize">15sp</item>
+        <item name="android:textColor">@color/TittleColor</item>
+        <item name="android:textSize">@dimen/TittleTextSize</item>
         <item name="android:lineSpacingExtra">2dp</item>
         <item name="android:clickable">true</item>
         <item name="android:focusable">true</item>
@@ -27,8 +27,8 @@
     </style>
 
     <style name="chat_text_name_style">
-        <item name="android:textColor">#818181</item>
-        <item name="android:textSize">15sp</item>
+        <item name="android:textColor">@color/TextColor</item>
+        <item name="android:textSize">@dimen/NotesTextSize</item>
         <item name="android:gravity">center</item>
     </style>
     <!--news interface-->
