--- a/app/src/main/res/layout/page_02.xml
+++ b/app/src/main/res/layout/page_02.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/BackgroundColor"
+                android:background="@color/PrimaryColor"
                 android:gravity="center_vertical"
                 android:orientation="vertical">
 
@@ -21,14 +21,20 @@
             android:textColor="#ffffff"
             android:textSize="@dimen/NavigationTittleSize"/>
     </RelativeLayout>
+    <TextView
+        android:id="@+id/temp_background"
+        android:layout_below="@id/rl_layout"
+        android:layout_width="240dp"
+        android:layout_height="1px"
+        android:layout_centerInParent="true"
+        android:background="@color/BackgroundColor"/>
 
     <RelativeLayout
         android:id="@+id/test_area"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/rl_layout"
-        android:background="@color/BackgroundColor"
-        android:layout_marginTop="1px"
+        android:layout_below="@id/temp_background"
+        android:background="@color/PrimaryColor"
         android:layout_marginBottom="5dp">
 
     <EditText
@@ -39,8 +45,8 @@
         android:paddingRight="5dp"
         android:paddingBottom="5dp"
         android:layout_centerInParent="true"
+        android:layout_marginTop="5dp"
         android:layout_marginBottom="10dp"
-        android:layout_marginTop="10dp"
         android:hint="搜索"
         android:textColor="@color/TittleColor"
         android:textSize="@dimen/TextTextSize"
