--- a/app/src/main/res/layout/page_02.xml
+++ b/app/src/main/res/layout/page_02.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/PrimaryColor"
+                android:background="@color/BackgroundColor"
                 android:gravity="center_vertical"
                 android:orientation="vertical">
 
@@ -21,36 +21,26 @@
             android:textColor="#ffffff"
             android:textSize="@dimen/NavigationTittleSize"/>
     </RelativeLayout>
-    <TextView
-        android:id="@+id/temp_background"
-        android:layout_below="@id/rl_layout"
-        android:layout_width="240dp"
-        android:layout_height="1px"
-        android:layout_centerInParent="true"
-        android:background="@color/BackgroundColor"/>
-
     <RelativeLayout
         android:id="@+id/test_area"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/temp_background"
-        android:background="@color/PrimaryColor"
+        android:layout_below="@id/rl_layout"
+        android:background="@color/white"
         android:layout_marginBottom="5dp">
 
-    <EditText
-        android:id="@+id/friend_search_bar"
-        android:layout_width="240dp"
-        android:layout_height="35dp"
-        android:paddingLeft="42dp"
-        android:paddingRight="5dp"
-        android:paddingBottom="5dp"
-        android:layout_centerInParent="true"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="10dp"
-        android:hint="搜索"
-        android:textColor="@color/TittleColor"
-        android:textSize="@dimen/TextTextSize"
-        android:background="@drawable/icon_search_push"/>
+        <EditText
+            android:id="@+id/friend_search_bar"
+            android:layout_width="300dp"
+            android:layout_height="35dp"
+            android:paddingLeft="65dp"
+            android:paddingRight="5dp"
+            android:layout_centerInParent="true"
+            android:layout_marginTop="40dp"
+            android:hint="搜索"
+            android:textColor="@color/TittleColor"
+            android:textSize="@dimen/TextTextSize"
+            android:background="@drawable/icon_search_push"/>
     </RelativeLayout>
 
     <ListView
