--- a/app/src/main/res/layout/activity_bottom.xml
+++ b/app/src/main/res/layout/activity_bottom.xml
@@ -3,11 +3,10 @@
               xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
-              android:background="#E8E8E8" >
-
+              android:background="@color/white"
+    >
     <LinearLayout
         android:id="@+id/ll_home"
-        android:layout_marginTop="5dp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
@@ -26,6 +25,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="3dp"
             android:text="消息"
+            android:visibility="gone"
             android:textColor="#1B940A"
             android:textSize="@dimen/TittleTextSize"
             android:textStyle="bold" />
@@ -33,7 +33,6 @@
 
     <LinearLayout
         android:id="@+id/ll_address"
-        android:layout_marginTop="5dp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
@@ -52,6 +51,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="3dp"
             android:text="通讯录"
+            android:visibility="gone"
             android:textColor="@color/TittleColor"
             android:textSize="@dimen/TittleTextSize"
             android:textStyle="bold" />
@@ -59,17 +59,17 @@
 
     <LinearLayout
         android:id="@+id/ll_friend"
-        android:layout_marginTop="5dp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:gravity="center"
+        android:layout_gravity="center"
         android:orientation="vertical" >
 
         <ImageView
             android:id="@+id/iv_friend"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:src="@drawable/tab_find" />
 
         <TextView
@@ -78,6 +78,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="3dp"
             android:text="发现"
+            android:visibility="gone"
             android:textSize="@dimen/TittleTextSize"
             android:textColor="@color/TittleColor"
             android:textStyle="bold" />
@@ -85,17 +86,17 @@
 
     <LinearLayout
         android:id="@+id/ll_setting"
-        android:layout_marginTop="5dp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:gravity="center"
+        android:layout_gravity="center"
         android:orientation="vertical" >
 
         <ImageView
             android:id="@+id/iv_setting"
-            android:layout_width="38dp"
-            android:layout_height="48dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:src="@drawable/tab_me" />
 
         <TextView
@@ -104,6 +105,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="3dp"
             android:text="我"
+            android:visibility="gone"
             android:textSize="@dimen/TittleTextSize"
             android:textColor="@color/TittleColor"
             android:textStyle="bold" />
