--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -50,4 +50,35 @@
         <item name="android:windowNoTitle">true</item>
         <item name="android:textSize">14sp</item>
     </style>
+
+    <!-- login dialog -->
+    <style name="loginDialogStyle" parent="Theme.ShareDialog">
+        <item name="android:windowFrame">@null</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowContentOverlay">@null</item>
+    </style>
+
+
+
+    <style name="menuDialogStyle" parent="@android:style/Theme.Dialog">
+        <item name="android:windowFrame">@null</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:background">@android:color/transparent</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:backgroundDimAmount">0.6</item>
+        <item name="android:backgroundDimEnabled">true</item>
+    </style>
+
+    <style name="menuDialogText">
+        <item name="android:textColor">#FFAAAAAA</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="menuDialogText2">
+        <item name="android:textColor">#FFEEBB66</item>
+        <item name="android:textSize">16sp</item>
+    </style>
 </resources>
